tests/NormalTests/paczka1/fuzzy1/43914775.err
Error in line 3: uSTt4Dw S550 25,7
Error in line 8: uSTt4Dw S791 11,9
Error in line 14: uSTt4Dw S471 93,7
Error in line 26: S471BS550B98,8
Error in line 19: S471 S743 247,5
